fix(styles): improve input container grid responsiveness
Updated grid-template-columns for checkbox, radio group, and switch input containers to use a flexible 1fr column for better alignment and responsiveness. Added width: 100% to radio group and switch containers. Also improved selector formatting for .tnt-label in radio group. These changes ensure consistent and responsive layouts across input components.

--- a/LiveTest/LiveTest.Client/Pages/Form.razor
+++ b/LiveTest/LiveTest.Client/Pages/Form.razor
@@ -148,6 +148,23 @@
 				<TnTInputSwitch @bind-Value="@Input.FalseSwitch" Placeholder="@_placeholder" SupportingText="@_supportingText" Label="@_label" StartIcon="@_startIcon" EndIcon="@_endIcon" Tooltip="@(_g? _tooltip : null)" />
 			</TnTColumn>
 		</TnTRow>
+
+		<TnTRow>
+			<TnTColumn S="6">
+				<TnTInputCheckbox @bind-Value="@Input.Checkbox" Placeholder="@_placeholder" SupportingText="@_supportingText" Label="@(_e ? "My really long label that might wrap" : string.Empty)" StartIcon="@_startIcon" EndIcon="@_endIcon" Tooltip="@(_g? _tooltip : null)" />
+			</TnTColumn>
+
+			<TnTColumn S="6">
+				<TnTInputSwitch @bind-Value="@Input.Switch" Placeholder="@_placeholder" SupportingText="@_supportingText" Label="@(_e ? "My really long label that might wrap" : string.Empty)" StartIcon="@_startIcon" EndIcon="@_endIcon" Tooltip="@(_g? _tooltip : null)" />
+			</TnTColumn>
+			<TnTColumn S="6">
+				<TnTInputCheckbox @bind-Value="@Input.Checkbox" Placeholder="@_placeholder" SupportingText="@_supportingText" Label="@(_e ? "My really long label that might wrap My really long label that might wrap My really long label that might wrap" : string.Empty)" StartIcon="@_startIcon" EndIcon="@_endIcon" Tooltip="@(_g? _tooltip : null)" />
+			</TnTColumn>
+
+			<TnTColumn S="6">
+				<TnTInputSwitch @bind-Value="@Input.Switch" Placeholder="@_placeholder" SupportingText="@_supportingText" Label="@(_e ? "My really long label that might wrap My really long label that might wrap My really long label that might wrap" : string.Empty)" StartIcon="@_startIcon" EndIcon="@_endIcon" Tooltip="@(_g? _tooltip : null)" />
+			</TnTColumn>
+		</TnTRow>
 		<TnTRow>
 			<h3>
 				Select @Input.Select @string.Join(", ", Input.Multi)
