--- a/NTComponents/Form/TnTInputRadioGroup.razor.scss
+++ b/NTComponents/Form/TnTInputRadioGroup.razor.scss
@@ -8,6 +8,7 @@
     grid-template-rows: auto auto;
     grid-template-columns: 1fr minmax(auto, 8ch) minmax(0, auto);
     width: 100%;
+    margin-bottom: 4px;
     @include base.tnt-input-length;
     @include base.supporting-text;
 
