--- a/NTComponents/Form/TnTInputTextArea.razor.scss
+++ b/NTComponents/Form/TnTInputTextArea.razor.scss
@@ -33,7 +33,7 @@
         color: base.$text-color;
         transition: 250ms ease-in-out;
         grid-template-rows: auto;
-
+        margin-top: 6px;
         @include base.tnt-label;
 
 
