--- a/NTComponents/Layout/TnTLayout.razor.scss
+++ b/NTComponents/Layout/TnTLayout.razor.scss
@@ -1,10 +1,16 @@
-﻿@use '../Styles/_Variables/_measurements.scss' as measurements;
+@use '../Styles/_Variables/_measurements.scss' as measurements;
 
 .tnt-layout {
     display: grid;
     height: 100vh;
     width: 100vw;
     grid-template-columns: 1fr;
+    grid-template-rows: 100%;
+
+    .tnt-layout {
+        width: 100%;
+        height: 100%;
+    }
 
     &:has(> .tnt-side-nav):has(> .tnt-footer):has(> .tnt-header) {
         grid-template-areas: "sidenav header" "sidenav body" "sidenav footer";
