--- a/NTComponents/Grid/Infrastructure/TnTDataGridBodyRow.razor
+++ b/NTComponents/Grid/Infrastructure/TnTDataGridBodyRow.razor
@@ -5,7 +5,7 @@
 <tr @attributes="AdditionalAttributes"
     class="@_elementClass"
     @onclick="@(Context.RowClickCallback.HasDelegate ? () => Context.RowClickCallback.InvokeAsync(Item) : null!)"
-    @key="Context.ItemKey.Invoke(Item)" style="@($"height: {Context.Grid.ItemSize}px")">
+    @key="Context.ItemKey.Invoke(Item)" style="@($"height: {Context.Grid.ItemSize}px;max-height:{Context.Grid.ItemSize}px")">
     @foreach (var column in Context.Columns) {
         <TnTDataGridBodyCell TGridItem="@TGridItem" Column="@column" Item="@Item" />
     }
