--- a/LiveTest/LiveTest/Components/Pages/VirtualizedGrid.razor
+++ b/LiveTest/LiveTest/Components/Pages/VirtualizedGrid.razor
@@ -17,7 +17,7 @@
 
 <div style="height: 60vh; overflow-y:scroll">
     <TnTDataGrid ItemsProvider="@_provider" Virtualize="true" OnRowClicked="RowClicked" TGridItem="DataGridItem" DataGridAppearance="DataGridAppearance.Stripped | DataGridAppearance.Compact">
-        <TnTPropertyColumn Property="@(x => x.Column1)" Sortable="true" />
+        <TnTPropertyColumn Property="@(x => x.Column1)" Sortable="true" IsDefaultSortColumn="true"/>
         <TnTPropertyColumn Property="@(x => x.Column2)" Sortable="true" TextAlign="TextAlign.Center" MaxWidth="50" HeaderAlignment="TextAlign.Left" />
         <TnTPropertyColumn Property="@(x => x.Column3)" Format="MM/yyyy" HeaderAlignment="TextAlign.Right" />
         <TnTTemplateColumn>
@@ -50,7 +50,7 @@
                 var list = new List<DataGridItem>();
                 foreach (var i in Enumerable.Range(1, 1000)) {
                     list.Add(new DataGridItem() {
-                        Column1 = Random.Shared.Next(1, 1000),
+                        Column1 = i,
                         Column2 = Guid.NewGuid().ToString(),
                         Column3 = new DateTime(Random.Shared.Next(1, 10000), Random.Shared.Next(1, 13), Random.Shared.Next(1, 29))
                     });
@@ -85,7 +85,7 @@
         await _service.ShowAsync("Item clicked", item.Column2);
     }
 
-    public class DataGridItem {
+    public record DataGridItem {
 
         public int Column1 { get; set; }
 
