--- a/NTComponents/Grid/Infrastructure/TnTDataGridVirtualizedBody.razor
+++ b/NTComponents/Grid/Infrastructure/TnTDataGridVirtualizedBody.razor
@@ -1,26 +1,27 @@
-﻿@typeparam TGridItem
+@typeparam TGridItem
 @inherits TnTDataGridBody<TGridItem>
 
 <tbody>
-    <TnTVirtualize TItem="@((int, TGridItem))"
-                   ItemsProvider="@ProvideVirtualizedItemsAsync"
-                   @ref="_virtualize">
-        <ItemTemplate>
-            <TnTDataGridBodyRow aria-rowindex="@context.Item1" Item="@context.Item2" />
-        </ItemTemplate>
-        <LoadingTemplate>
-            @for (var i = 0; i < 10; ++i) {
-                <tr style="@($"height: {Context.Grid.ItemSize}px")">
-      
-                    <td colspan="@Context.Columns.Count()">
-                        <TnTSkeleton class="tnt-table-skeleton" />
-                    </td>
-                </tr>
-            }
-        </LoadingTemplate>
-        <EmptyTemplate>
-            <TnTDataGridBodyRowEmpty TGridItem="@TGridItem" />
-        </EmptyTemplate>
+	<NTVirtualize TItem="@((int, TGridItem))"
+				  ItemsProvider="@ProvideVirtualizedItemsAsync"
+				  SpacerElement="tr"
+				  @ref="_virtualize"
+				  ItemSize="@Context.Grid.ItemSize"
+				  OverscanCount="@Context.Grid.OverscanCount">
+		<ItemTemplate>
+			<TnTDataGridBodyRow aria-rowindex="@context.Item1" Item="@context.Item2" />
+		</ItemTemplate>
+		<LoadingTemplate>
+			<tr aria-rowindex="@context.Index" style="@($"height: {Context.Grid.ItemSize}px")">
 
-    </TnTVirtualize>
+				<td colspan="@Context.Columns.Count()">
+					<TnTSkeleton class="tnt-table-skeleton" />
+				</td>
+			</tr>
+		</LoadingTemplate>
+		<EmptyTemplate>
+			<TnTDataGridBodyRowEmpty TGridItem="@TGridItem" />
+		</EmptyTemplate>
+
+	</NTVirtualize>
 </tbody>
