feat(radio-group): improve focus and int/enum support
TnTInputRadioGroup.SetFocusAsync now focuses the selected radio button, supporting int, nullable int, and enum types. TnTInputRadio uses type-safe equality for checked logic. Added tests for int and nullable int scenarios, and updated styles to visually indicate focus. Helper methods and models for int types introduced in test suite.

--- a/NTComponents/Form/TnTInputRadio.razor.scss
+++ b/NTComponents/Form/TnTInputRadio.razor.scss
@@ -1,6 +1,7 @@
 @use '_inputBase.scss' as base;
 @use '../Styles/_Variables/_colors.scss' as colors;
 @use '../Styles/_Variables/_typescale.scss' as typescale;
+
 .tnt-radio-input {
     position: relative;
     display: inline-grid;
@@ -67,6 +68,16 @@
 
     ::deep {
         @include base.default-icon;
+    }
+
+    &:focus-within {
+        .tnt-label {
+            color: base.$tint-color;
+        }
+
+        .tnt-radio-button {
+            border-color: base.$tint-color;
+        }
     }
 
     &:has(input:checked) {
@@ -218,6 +229,4 @@
             }
         }
     }
-
-
 }
