--- a/NTComponents/Form/TnTInputRadio.razor
+++ b/NTComponents/Form/TnTInputRadio.razor
@@ -19,7 +19,7 @@
            readonly="@_readOnly"
            disabled="@_disabled"
            value="@GetValueAsString()"
-           checked="@(_group.InternalCurrentValue?.Equals(Value) == true ? GetToggledTrueValue() : null)"
+           checked="@(IsChecked ? GetToggledTrueValue() : null)"
            @onchange="@_group.UpdateValueAsync"
            @onblur="@OnBlurAsync"" />
 
