ref(input-radio): simplify checked logic in radio input
Removed IsChecked property and set checked attribute directly in markup by comparing _group.InternalCurrentValue to Value. This streamlines the code and improves maintainability.

--- a/NTComponents/Form/TnTInputRadio.razor
+++ b/NTComponents/Form/TnTInputRadio.razor
@@ -19,7 +19,7 @@
            readonly="@_readOnly"
            disabled="@_disabled"
            value="@GetValueAsString()"
-           checked="@(IsChecked ? GetToggledTrueValue() : null)"
+           checked="@(_group.InternalCurrentValue?.Equals(Value) == true ? GetToggledTrueValue() : null)"
            @onchange="@_group.UpdateValueAsync"
            @onblur="@OnBlurAsync"" />
 
