--- a/NTComponents/Skeleton/TnTSkeleton.razor.scss
+++ b/NTComponents/Skeleton/TnTSkeleton.razor.scss
@@ -1,9 +1,14 @@
-﻿.tnt-skeleton {
-    margin: 8px;
+$skeleton-margin: 8px;
+.tnt-skeleton {
+    margin: $skeleton-margin;
     height: 80px;
 
     &.tnt-skeleton-round {
         border-radius: 64px;
+    }
+
+    &.tnt-fill-height{
+        height: calc(100% - calc(2 * $skeleton-margin));
     }
 
     &.tnt-animated {
