fix(typeahead): fixed default width of typeahead

--- a/NTComponents/Typeahead/TnTTypeahead.razor.scss
+++ b/NTComponents/Typeahead/TnTTypeahead.razor.scss
@@ -1,9 +1,9 @@
-﻿@use '../Styles/_Variables/_colors.scss' as colors;
+@use '../Styles/_Variables/_colors.scss' as colors;
 @use '../Styles/_Variables/_elevation.scss' as elevation;
 @use '../Styles/_Variables/_typescale.scss' as typescale;
 
 .tnt-typeahead {
-    width: calc(100% - 16px);
+    width: 100%;
     box-sizing: border-box;
     margin: 8px;
     position: relative;
