feat(typeahead): add error, supporting text, and tooltip
Adds ErrorMessage, SupportingText, Tooltip, and TooltipIcon parameters to TnTTypeahead and TnTInputBase. Error messages now take precedence over validation messages and trigger "invalid" styling. Tooltip support is added, with layout adjustments for progress indicator. Several TnTInputBase properties are made virtual for extensibility. Refactors focus/blur handling and updates SCSS for improved layout.

--- a/LiveTest/LiveTest.Client/Pages/Typeahead.razor
+++ b/LiveTest/LiveTest.Client/Pages/Typeahead.razor
@@ -14,7 +14,8 @@
 	</select>
 </label>
 
-<TnTTypeahead ItemsLookupFunc="SearchFunc" Label="Typeahead" Appearance="@Appearance" ItemSelectedCallback="@((Item item) => SelectedItems.Add(item))">
+<TnTTypeahead ItemsLookupFunc="SearchFunc" Label="Typeahead" Appearance="@Appearance" ItemSelectedCallback="@((Item item) => SelectedItems.Add(item))"SupportingText="Support" ErrorMessage="My Error Message" >
+	<Tooltip>My tooltip</Tooltip>
 	<ResultTemplate>
 		@context.Name @context.Email
 	</ResultTemplate>
