--- a/NTComponents/Typeahead/TnTTypeahead.razor
+++ b/NTComponents/Typeahead/TnTTypeahead.razor
@@ -26,11 +26,15 @@
 					  Disabled="@Disabled"
 					  BackgroundColor="BackgroundColor"
 					  StartIcon="@MaterialIcon.Search"
+					  Tooltip="@Tooltip"
+					  TooltipIcon="@TooltipIcon"
 					  @onkeydown="SelectOrShiftFocusAsync"
 					  @onfocus="@OnFocusAsync"
 					  OnBlurCallback="@OnBlurAsync"
+					  SupportingText="@SupportingText"
+					  ErrorMessage="@ErrorMessage"
 					  @ref="_inputBox" />
-		<TnTProgressIndicator Show="@_searching" ProgressColor="ProgressColor" Size="Size.Small" />
+		<TnTProgressIndicator Show="@true" ProgressColor="ProgressColor" Size="Size.Small" />
 	</span>
 	@if (_focused) {
 		<button type="submit" disabled style="display:none" aria-hidden="true" />
