--- a/NTComponents/Form/TnTInputBase.razor
+++ b/NTComponents/Form/TnTInputBase.razor
@@ -28,9 +28,12 @@
 		@TooltipIcon.Render()
 	}
 
-	@if (!string.IsNullOrWhiteSpace(SupportingText) || (EditContext is not null && !DisableValidationMessage && ValueExpression is not null)) {
+	@if (!string.IsNullOrWhiteSpace(SupportingText) || !string.IsNullOrWhiteSpace(ErrorMessage) || (EditContext is not null && !DisableValidationMessage && ValueExpression is not null)) {
 		<span class="tnt-supporting-text">
-			@if (EditContext is not null && !DisableValidationMessage && ValueExpression is not null) {
+			@if (!string.IsNullOrWhiteSpace(ErrorMessage)) {
+				<div class="tnt-components tnt-validation-message">@ErrorMessage</div>
+			}
+			else if (EditContext is not null && !DisableValidationMessage && ValueExpression is not null) {
 				<ValidationMessage TValue="@TInputType" For="@ValueExpression" class="tnt-components tnt-validation-message" />
 			}
 			@SupportingText
