--- a/NTComponents/Typeahead/TnTTypeahead.razor.scss
+++ b/NTComponents/Typeahead/TnTTypeahead.razor.scss
@@ -3,9 +3,7 @@
 @use '../Styles/_Variables/_typescale.scss' as typescale;
 
 .tnt-typeahead {
-    width: 100%;
     box-sizing: border-box;
-    margin: 8px;
     position: relative;
 
     .tnt-typeahead-box {
@@ -24,7 +22,13 @@
             progress.tnt-components {
                 position: absolute;
                 top: 0;
-                right: 0;
+                right: 8px;
+            }
+        }
+
+        &:has(tnt-tooltip) {
+            ::deep progress.tnt-components {
+                right: 32px;
             }
         }
     }
@@ -65,10 +69,10 @@
                 }
             }
 
-            li:first-child {
-                margin-top: 8px;
-                border-top: none;
-            }
+                li:first-child {
+                    margin-top: 8px;
+                    border-top: none;
+                }
         }
     }
 }
