feat(styles): add compact mode for TnTInputSelect
Introduces new `.tnt-form-compact` styles to support a more compact layout for TnTInputSelect, including adjusted label scaling and translation, with special handling for start icons. Also fixes minor formatting for `margin-top` property.

--- a/NTComponents/Form/TnTInputSelect.razor.scss
+++ b/NTComponents/Form/TnTInputSelect.razor.scss
@@ -30,7 +30,7 @@
         cursor: pointer;
         color: base.$text-color;
         transition: 250ms ease-in-out;
-        margin-top:6px;
+        margin-top: 6px;
 
         @include base.tnt-label(select);
 
@@ -229,6 +229,18 @@
                     &:has(.tnt-start-icon) {
                         .tnt-label {
                             transform: scale(0.75) translate(-50px,-38px)
+                        }
+                    }
+                }
+
+                &.tnt-form-compact {
+                    .tnt-label {
+                        transform: scale(0.75) translateY(-26px) !important;
+                    }
+
+                    &:has(.tnt-start-icon) {
+                        .tnt-label {
+                            transform: scale(0.75) translate(-50px,-26px) !important;
                         }
                     }
                 }
